fixed horizontal scrolling bar issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,14 @@ body {
 }
 
 .main-content {
-  background: url(../images/your_verse_hero.jpg) center -48.55em no-repeat;
-  background-size: 1440px 1315px;
+  background-image: url(../images/your_verse_hero.jpg);
+  background-position: center 136%;
+  background-repeat: no-repeat;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  max-width: 100%;
+  width: 90rem;
 }
 
 .header {
@@ -80,6 +81,7 @@ ul {
 .search input {
   background: url(../images/icon-search.svg) no-repeat;
   background-position: 4px 5px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .search-input {
